# star-ring

./: README.md  conftest.py  main.py  pyproject.toml
conf/: __init__.py  model_info.toml  path_conf.py
core/: client.py  deepseek_client.py  gemini_client.py  gpt_client.py
files/: openapi.json  test_case.json  test_cases.json  test_report.json
funcs/: json_handler.py  read_model_conf.py  request_build.py  test_build.py
log/: logger.py
prompts/: prompt_for_generate_test_case.md
test_server/: flask_server.py
