[project]
name = "star-ring"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.0",
    "flask-restx>=1.3.0",
    "google-genai>=1.5.0",
    "loguru>=0.7.3",
    "pytest>=8.3.5",
    "pytest-html>=4.1.1",
    "requests>=2.32.3",
    "toml>=0.10.2",
]
